add img_subject_portlet news_subject_portlet search_news_portlet

--- a/src/daisoi/theme/locales/zh-tw/LC_MESSAGES/daisoi.theme.po
+++ b/src/daisoi/theme/locales/zh-tw/LC_MESSAGES/daisoi.theme.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2018-07-25 10:16+0000\n"
+"POT-Creation-Date: 2018-07-26 08:36+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,7 +16,7 @@ msgstr ""
 
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:363
 msgid "12 SERVICES"
-msgstr ""
+msgstr "12大功能優勢"
 
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:371
 msgid "12 Services Description"
@@ -24,28 +24,49 @@ msgstr ""
 
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:120
 msgid "ABOUT Daisoi"
-msgstr ""
+msgstr "關於大碩"
 
+#: ../browser/overrides/daisoi.content.browser.templates.contact_us_view.pt:26
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:160
 msgid "Contact Us"
+msgstr "聯絡我們"
+
+#: ../browser/overrides/daisoi.content.browser.templates.contact_us_view.pt:28
+msgid "Contact Us Desctiption"
 msgstr ""
 
-#: ../browser/overrides/daisoi.content.viewlets.templates.top_viewlet.pt:15
+#: ../browser/overrides/daisoi.content.viewlets.templates.top_viewlet.pt:17
 msgid "Follow us:"
+msgstr "跟著我們:"
+
+#: ../browser/overrides/daisoi.content.browser.templates.contact_us_view.pt:64
+msgid "Head Office"
+msgstr "總公司"
+
+#: ../browser/overrides/daisoi.content.browser.templates.contact_us_view.pt:57
+msgid "INFOMATION"
 msgstr ""
 
 #: ../configure.zcml:27
 msgid "Installs the Plone theme package daisoi.theme."
 msgstr ""
 
+#: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:178
+msgid "Main Service"
+msgstr "主要服務"
+
+#: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:186
+msgid "Main Service Description"
+msgstr ""
+
 #: ../browser/overrides/daisoi.content.browser.templates.folder_news_view.pt:71
 #: ../browser/overrides/daisoi.content.browser.templates.folder_performance_view.pt:59
 msgid "No results were found."
-msgstr ""
+msgstr "查詢不到任何結果"
 
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:312
 msgid "Performance"
-msgstr ""
+msgstr "應用實績"
 
 #: ../configure.zcml:27
 msgid "Plone Theme: Theme"
@@ -53,11 +74,11 @@ msgstr ""
 
 #: ../browser/overrides/daisoi.content.browser.templates.folder_news_view.pt:57
 msgid "See More"
-msgstr ""
+msgstr "查看更多"
 
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:83
 msgid "Smart Factory"
-msgstr ""
+msgstr "更聰明的智慧工廠"
 
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:91
 msgid "Smart Factory Description"
@@ -65,7 +86,12 @@ msgstr ""
 
 #: ../browser/overrides/daisoi.content.browser.templates.plone_root_view.pt:461
 msgid "Solve the problems"
-msgstr ""
+msgstr "立即解決您工廠所面臨的問題！！"
+
+#: ../browser/overrides/daisoi.content.portlets.img_subject_portlet.pt:5
+#: ../browser/overrides/daisoi.content.portlets.news_subject_portlet.pt:5
+msgid "Tags"
+msgstr "標籤"
 
 #: ../configure.zcml:36
 msgid "Uninstall: Plone Theme: Theme"
